# GoProblemGenerator

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.hpp  main.cpp  test.cpp  test.hpp  tree.cpp  tree.hpp
pachi/: build.h  pachi.c  pachi.h
pachi/t-unit/.deps/: test.P
pachi/uct/.deps/: dynkomi.P  prior.P  search.P  tree.P  uct.P  walk.P
pachi/uct/policy/.deps/: generic.P  ucb1.P  ucb1amaf.P
src/: main.cpp  test.cpp
